# s14822_Evaluation_Framework

./: .gitignore  LICENSE  README.md  main1.py  main2.py  main3.py  pyproject.toml  requirements.txt
data/EDA_notebooks/: 11_REst.ipynb  12_Sports.ipynb  13_Others.ipynb  14_Host.ipynb  1_Edu.ipynb  3_Bank.ipynb  4_Health.ipynb  6_Lstyle.ipynb  7_Log.ipynb  8_Adv.ipynb  9_Emp.ipynb
data/datatables/: 1_Edu.csv
models/Lida/: lida_vr.py
models/MultiVision/: multivision_vr.py
models/MultiVision/utils/: ChartRecommender.py  featureExtractor.py
recommendations/gpt4/: gpt4_vr.py
recommendations/lida/: lida_vr.py
results/gpt3_5/: 11_REst  3_Bank  4_Health  7_Log  8_Adv
results/gpt3_5_against_matplotlib/: 11_REst  3_Bank  4_Health  7_Log  8_Adv
results/gpt4/: 11_REst  3_Bank  4_Health  7_Log  8_Adv
scripts/: benchmark_func.py  meta_generator.py  notebook_convertor.py  preprocessor.py  visual_extractor.py  vl_convertor.py
utils/: other_func.py
